--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <h3>Project 1</h3>
                 <p>The Grind Anime Website is a beginner-friendly project focused on teaching students and web development beginners the basics of creating an anime-themed website using HTML, CSS, and JavaScript</p>
                 <div class="btn-group">
-                    <div class="btn">Live Demo If Any</div>
+                    <div class="btn"><a href ="https://algorithmicphoenix.github.io/Grind-Anime/">Live Demo </a></div>
                     <div class="btn"><a href="https://github.com/AlgorithmicPhoenix/Grind-Anime">GitHub Repo</a></div>
                 </div>
             </div>
@@ -106,6 +106,7 @@
                 <h3>Project 2</h3>
                 <p>Portfolio</p>
                 <div class="btn-group">
+                    <div class="btn"><a href ="https://algorithmicphoenix.github.io/AlgorithmicPhoenix/">Live Demo </a></div>
                     <div class="btn"><a href="https://github.com/AlgorithmicPhoenix/Portfolio">GitHub Repo</a></div>
                 </div>
             </div>
